.metadata/.plugins/org.eclipse.cdt.ui/lib.build.log
13:41:26 **** Incremental Build of configuration Debug for project lib ****
make -j20 all 
arm-none-eabi-gcc "../cubemx/Src/gpio.c"
arm-none-eabi-gcc "../applications/key.c"
arm-none-eabi-gcc "../applications/main.c"
../cubemx/Src/gpio.c: In function 'MX_GPIO_Init':
../cubemx/Src/gpio.c:54:21: error: 'led_GPIO_Port' undeclared (first use in this function)
   HAL_GPIO_WritePin(led_GPIO_Port, led_Pin, GPIO_PIN_RESET);
                     ^
../cubemx/Src/gpio.c:54:21: note: each undeclared identifier is reported only once for each function it appears in
../cubemx/Src/gpio.c:54:36: error: 'led_Pin' undeclared (first use in this function)
   HAL_GPIO_WritePin(led_GPIO_Port, led_Pin, GPIO_PIN_RESET);
                                    ^
../cubemx/Src/gpio.c:57:28: error: 'outA4_Pin' undeclared (first use in this function)
   HAL_GPIO_WritePin(GPIOA, outA4_Pin|outA5_Pin|outA6_Pin|outA7_Pin
                            ^
../cubemx/Src/gpio.c:57:38: error: 'outA5_Pin' undeclared (first use in this function)
   HAL_GPIO_WritePin(GPIOA, outA4_Pin|outA5_Pin|outA6_Pin|outA7_Pin
                                      ^
../cubemx/Src/gpio.c:57:48: error: 'outA6_Pin' undeclared (first use in this function)
   HAL_GPIO_WritePin(GPIOA, outA4_Pin|outA5_Pin|outA6_Pin|outA7_Pin
                                                ^
../cubemx/Src/gpio.c:57:58: error: 'outA7_Pin' undeclared (first use in this function)
   HAL_GPIO_WritePin(GPIOA, outA4_Pin|outA5_Pin|outA6_Pin|outA7_Pin
                                                          ^
../cubemx/Src/gpio.c:58:28: error: 'outA8_Pin' undeclared (first use in this function)
                           |outA8_Pin|outA11_Pin|outA12_Pin|outA14_Pin
                            ^
../cubemx/Src/gpio.c:58:38: error: 'outA11_Pin' undeclared (first use in this function)
                           |outA8_Pin|outA11_Pin|outA12_Pin|outA14_Pin
                                      ^
../cubemx/Src/gpio.c:58:49: error: 'outA12_Pin' undeclared (first use in this function)
                           |outA8_Pin|outA11_Pin|outA12_Pin|outA14_Pin
                                                 ^
../cubemx/Src/gpio.c:58:60: error: 'outA14_Pin' undeclared (first use in this function)
                           |outA8_Pin|outA11_Pin|outA12_Pin|outA14_Pin
                                                            ^
../cubemx/Src/gpio.c:59:28: error: 'outA15_Pin' undeclared (first use in this function)
                           |outA15_Pin, GPIO_PIN_RESET);
                            ^
../cubemx/Src/gpio.c:62:28: error: 'outB0_Pin' undeclared (first use in this function)
   HAL_GPIO_WritePin(GPIOB, outB0_Pin|outB1_Pin|outB2_Pin|outB10_Pin
                            ^
../cubemx/Src/gpio.c:62:38: error: 'outB1_Pin' undeclared (first use in this function)
   HAL_GPIO_WritePin(GPIOB, outB0_Pin|outB1_Pin|outB2_Pin|outB10_Pin
                                      ^
../cubemx/Src/gpio.c:62:48: error: 'outB2_Pin' undeclared (first use in this function)
   HAL_GPIO_WritePin(GPIOB, outB0_Pin|outB1_Pin|outB2_Pin|outB10_Pin
                                                ^
../cubemx/Src/gpio.c:62:58: error: 'outB10_Pin' undeclared (first use in this function)
   HAL_GPIO_WritePin(GPIOB, outB0_Pin|outB1_Pin|outB2_Pin|outB10_Pin
                                                          ^
../cubemx/Src/gpio.c:63:28: error: 'outB12_Pin' undeclared (first use in this function)
                           |outB12_Pin|outB13_Pin|outB14_Pin|outB15_Pin
                            ^
../cubemx/Src/gpio.c:63:39: error: 'outB13_Pin' undeclared (first use in this function)
                           |outB12_Pin|outB13_Pin|outB14_Pin|outB15_Pin
                                       ^
../cubemx/Src/gpio.c:63:50: error: 'outB14_Pin' undeclared (first use in this function)
                           |outB12_Pin|outB13_Pin|outB14_Pin|outB15_Pin
                                                  ^
../cubemx/Src/gpio.c:63:61: error: 'outB15_Pin' undeclared (first use in this function)
                           |outB12_Pin|outB13_Pin|outB14_Pin|outB15_Pin
                                                             ^
../cubemx/Src/gpio.c:64:28: error: 'outB3_Pin' undeclared (first use in this function)
                           |outB3_Pin|outB4_Pin|outB5_Pin|outB6_Pin
                            ^
../cubemx/Src/gpio.c:64:38: error: 'outB4_Pin' undeclared (first use in this function)
                           |outB3_Pin|outB4_Pin|outB5_Pin|outB6_Pin
                                      ^
../cubemx/Src/gpio.c:64:48: error: 'outB5_Pin' undeclared (first use in this function)
                           |outB3_Pin|outB4_Pin|outB5_Pin|outB6_Pin
                                                ^
../cubemx/Src/gpio.c:64:58: error: 'outB6_Pin' undeclared (first use in this function)
                           |outB3_Pin|outB4_Pin|outB5_Pin|outB6_Pin
                                                          ^
../cubemx/Src/gpio.c:65:28: error: 'outB7_Pin' undeclared (first use in this function)
                           |outB7_Pin|outB8_Pin|outB9_Pin, GPIO_PIN_RESET);
                            ^
../cubemx/Src/gpio.c:65:38: error: 'outB8_Pin' undeclared (first use in this function)
                           |outB7_Pin|outB8_Pin|outB9_Pin, GPIO_PIN_RESET);
                                      ^
../cubemx/Src/gpio.c:65:48: error: 'outB9_Pin' undeclared (first use in this function)
                           |outB7_Pin|outB8_Pin|outB9_Pin, GPIO_PIN_RESET);
                                                ^
make: *** [cubemx/Src/subdir.mk:30: cubemx/Src/gpio.o] Error 1
make: *** Waiting for unfinished jobs....
../applications/main.c: In function 'passout':
../applications/main.c:68:13: warning: implicit declaration of function 'setlevel' [-Wimplicit-function-declaration]
             setlevel(temp);
             ^
../applications/main.c: At top level:
../applications/main.c:106:6: warning: conflicting types for 'setlevel'
 void setlevel(uint8_t ever)
      ^
../applications/main.c:68:13: note: previous implicit declaration of 'setlevel' was here
             setlevel(temp);
             ^
"make -j20 all" terminated with exit code 2. Build might be incomplete.

13:41:27 Build Failed. 28 errors, 2 warnings. (took 458ms)

